# arm_sim_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arm_sim_pkg/share/arm_sim_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  pluginlib.xml
install/movit_robot_arm_sim/share/movit_robot_arm_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml
install/my_arm_moveit_config/share/my_arm_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  (+5 more)
log/: latest_build
src/arm_sim_pkg/: CMakeLists.txt  package.xml  pluginlib.xml
src/arm_sim_pkg/config/: controllers.yaml
src/arm_sim_pkg/include/arm_sim_pkg/: arm_hw.hpp  motor_controller copy.hpp
src/arm_sim_pkg/launch/: display.launch.py
src/arm_sim_pkg/meshes/: BASE_LINKE_CP_STL.stl  LINK_2_BIG_ARM_STL.stl  LINK_3_SMALL_ARM_CP_STL.stl  LINK_5_HAND_CP_STL.stl
src/arm_sim_pkg/rviz/: arm_view.rviz
src/arm_sim_pkg/src/: arm_hw.cpp  arm_hw.cpp.bak  motor_controller copy.cpp  motor_controller.cpp  simple_joint_control.py
src/arm_sim_pkg/urdf/: simple_arm.xacro
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/movit_robot_arm_sim/: .setup_assistant  CMakeLists.txt
src/movit_robot_arm_sim/config/: five_joint_arm.ros2_control.xacro  five_joint_arm.srdf  five_joint_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
src/movit_robot_arm_sim/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/my_arm_moveit_config/: CMakeLists.txt
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/launch/: bringup.launch.py
src/traj_demo/: CMakeLists.txt
src/traj_demo/launch/: plan_once.launch.py
src/traj_demo/src/: dynamic_send_target.cpp  plan_once.cpp
(+170 files in other folders)
